make-a-wish-salesforce/objects/Background_check__c.object
<CustomObject>
    <description>This objects will contains the background check process details for the volunteers who submit the application to become a volunteer.</description>
    <fields>
        <fullName>Account_Email__c</fullName>
        <description>It will be used to store the account email</description>
        <formula>Volunteer__r.Account.Email__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Name__c</fullName>
        <description>It will be used to store the account  name</description>
        <formula>Volunteer__r.Account.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Phone__c</fullName>
        <description>It will be used to store the account phone</description>
        <formula>Volunteer__r.Account.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field will indicate that record is active record or not. And also active only apply for most recently created record.</description>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Date_Completed__c</fullName>
        <description>It will capture the background check process completed date.</description>
        <label>Date Completed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Requested__c</fullName>
        <description>It will capture the requested date for background check</description>
        <label>Date Requested</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <description>It holds the Expiration Date of Background check for volunteer.</description>
        <label>Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>From_Mulesoft__c</fullName>
        <defaultValue>false</defaultValue>
        <description>It indicated the record is created by manually or from mulesoft.</description>
        <label>From Mulesoft</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Hidden_Volunteer_Contact_Email__c</fullName>
        <description>This field is used as hidden field to store volunteer contact email in Background Check.</description>
        <label>Hidden Volunteer Contact Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Import_Id__c</fullName>
        <label>Import Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Migrated_Record__c</fullName>
        <defaultValue>false</defaultValue>
        <description>It indicated the record is created by manually or from mulesoft.</description>
        <label>Migrated Record</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RE_Date_Completed__c</fullName>
        <description>DATE_COMPLETED</description>
        <label>RE Date Completed</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RE_Date_Requested__c</fullName>
        <description>DATE_REQUESTED</description>
        <label>RE Date Requested</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RE_Import_Id__c</fullName>
        <description>ID, IMPORT_ID</description>
        <label>RE Import Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Requested_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This filed lookup to the user record</description>
        <label>Requested By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Background_Checks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Resided_in_US_for_past_7_years__c</fullName>
        <description>It will capture whether the Volunteer Resided US Past 7 Years or not.</description>
        <label>Are you residing in US for past 7 years?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>It will tells the final result about the background check.</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Approved w/ Conditions</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Volunteer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field will lookup to the volunteer contact</description>
        <label>Volunteer</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>The value should be volunteer contact</errorMessage>
            <filterItems>
                <field>Contact.RecordTypeId</field>
                <operation>equals</operation>
                <value>Volunteer Contact, Board Member</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Background Checks</relationshipLabel>
        <relationshipName>Background_Checks</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Background Check</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Volunteer__c</columns>
        <columns>Resided_in_US_for_past_7_years__c</columns>
        <columns>Date_Requested__c</columns>
        <columns>Date_Completed__c</columns>
        <columns>Date__c</columns>
        <columns>Status__c</columns>
        <columns>Requested_By__c</columns>
        <columns>Active__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>BC-{000000}</displayFormat>
        <label>Background check ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Background Checks</pluralLabel>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>BC_Date_Of_Completed_validation</fullName>
        <active>true</active>
        <description>Date of Completed should be mandatory while entering Status .</description>
        <errorConditionFormula>(Text(Status__c) != null || NOT(ISBLANK( Date__c ))) &amp;&amp; (ISBLANK(Date_Completed__c))</errorConditionFormula>
        <errorMessage>Please enter the value for Date Completed.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>BC_Status_validation</fullName>
        <active>true</active>
        <description>Status should be mandatory while entering Date of Completed.</description>
        <errorConditionFormula>Text(Status__c) = null &amp;&amp;  Not(ISBLANK(Date_Completed__c))</errorConditionFormula>
        <errorMessage>Please enter the value for status</errorMessage>
    </validationRules>
</CustomObject>